# tech_talk

./: Cargo.toml
src/: main.rs
src/basico/: declaracao_basica.rs  mod.rs
src/cmd/: mod.rs
src/crud/: crud.rs
src/structs/: structs.rs
